--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -1,1 +1,3 @@
-<pre><%= @role.to_yaml %></pre>
+    <h3>Character Name: <%= @role.character_name %></h3>
+    <h3>Movie Title: <%= @movie.title %></h3>
+    <h3>Actor Name: <%= @actor.name %></h3>
